--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    ext {
+        compileSdkVersion = 30
+        buildToolsVersion = '30.0.3'
+        minSdkVersion = 21
+        targetSdkVersion = 30
+
+        kotlinVersion = '1.4.20'
+        coreKtxVersion = '1.3.2'
+        appcompatVersion = '1.2.0'
+        materialVersion = '1.2.1'
+        constraintVersion = '2.0.4'
+        recyclerVersion = '1.1.0'
+        rxJavaVersion = '2.2.15'
+        rxAndroidVersion = '2.1.1'
+        rxKotlinVersion = '2.4.0'
+        glideVersion = '4.11.0'
+        retrofitVersion = '2.9.0'
+        daggerVersion = '2.30.1'
+        gsonVersion = '2.8.6'
+
+        junitVersion = '4.13.1'
+        extJunitVersion = '1.1.2'
+        espressoVersion = '3.3.0'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
